Bug 1703711 - fix dialog wrapping issue with checkboxes in in-content prompts, r=jaws
Differential Revision: https://phabricator.services.mozilla.com/D111195

UltraBlame original commit: 91d7b75f26cfbfc8eaedc6bbd7a66840b2e92bd7

--- a/toolkit/components/prompts/content/commonDialog.css
+++ b/toolkit/components/prompts/content/commonDialog.css
@@ -400,6 +400,20 @@ height
 100
 %
 ;
+}
+dialog
+[
+subdialog
+]
+#
+infoContainer
+dialog
+[
+subdialog
+]
+#
+checkboxContainer
+{
 /
 *
 Needed
